feat(HW3): add markup for light theme

--- a/HW3/index.html
+++ b/HW3/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PEAKS hiking club</title>
-    <link rel="stylesheet" href="fonts.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/fonts.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
@@ -20,13 +20,13 @@
                     <div class="small_txt">hiking club</div>
                 </div>
             </div>
-            <div class="title">
+            <h1 class="title">
                 Join one of our
                 <br>
                 <span class="backround--blue">awesome</span>
                 hikes
-            </div>
-            <div class="tree_bloks">
+            </h1>
+            <div class="tree_blocks">
                 <div class="main_txt">
                     Let us show you the hidden gems and adventurous trails our place has to offer. <br>
                     Our mountains are much less explored than their Slovakian, <br>
@@ -42,6 +42,110 @@
 
         </div>
     </section>
+    <section class="adventure">
+        <div class="container">
+            <div class="adventure_main_txt">
+                <h2>Welcome to <span class="backround--blue">adventure</span>!</h2>
+            </div>
+            <div class="adventure_box">
+                <div class="adventure_block">
+                    <div class="adventure_img adventure_scale">
+                        <img src="img/m-1.jpg" alt="1">
+                    </div>
+                    <div class="adventure_compound">
+                        <div class="adventure_title adventure--white">
+                            Tranquility cracks
+                        </div>
+                        <div class="adventure_txt adventure--grey">
+                            <p>We go on a visually stimulating adventure through some of most <br> scenic and popular
+                                ravines.
+                                Ine incredibly impressive trangullity <br> cracks shows off a complex series of paths,
+                                tunnel
+                                ways and awe- <br> inspiring views.</p>
+                        </div>
+                        <div class="adventure_link adventure--grey">
+                            <a href="#"> Learn more...</a>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="adventure_block">
+                    <div class="adventure_img adventure_scale">
+                        <img src="img/m-2.jpg" alt="2">
+                    </div>
+                    <div class="adventure_compound">
+                        <div class="adventure_title adventure--white">
+                            Skeleton gorge
+                        </div>
+                        <div class="adventure_txt adventure--grey">
+                            <p>Making our way through Skeleton Gorge's ravine, along the Smuts <br> Track. Navigating
+                                through a
+                                series of ladders and mossy river <br> Doulders. we arve sr one on ne tamous anon storca
+                                wnre
+                                beach <br> sand dams atop the summit.</p>
+                        </div>
+                        <div class="adventure_link adventure--grey">
+                            <a href="#"> Learn more...</a>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="adventure_block">
+                    <div class="adventure_img adventure_scale">
+                        <img src="img/m-3.jpg" alt="3">
+                    </div>
+                    <div class="adventure_compound">
+                        <div class="adventure_title adventure--white">
+                            Devils peak
+                        </div>
+                        <div class="adventure_txt adventure--grey">
+                            <p>We commence at the base o adventure--greyr the latelberg start point walking <br> the
+                                contour. with unique
+                                views and possibly the best vantage <br> point to make out the entire Lion, iving below
+                                lable
+                                Mountain.
+                            </p>
+                        </div>
+                        <div class="adventure_link adventure--grey">
+                            <a href="#"> Learn more...</a>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="container">
+            <div class="top">
+                <div class="top_two">
+                    <div class="title">Ready to <span class="backround--blue">start</span> your adventure?</div>
+                    <div class="top_txt">Start your journey for a new impressions</div>
+                </div>
+                <div class="btn"> <button class="btn--green btn-block">Join us</button></div>
+            </div>
+        </div>
+        <div class="container_2">
+            <div class="bot">
+                <div class="logo">
+                    <img src="img/m-logo.png" alt="logo" class="logo_img">
+                    <div class="logo_txt">
+                        <div class="big_txt">PEAKS</div>
+                        <div class="small_txt">hiking club</div>
+                    </div>
+                </div>
+                <div class="bot_txt">
+                    <p>We create content and curate adventures for <br>
+                        people looking for a truly authetic encounter in <br>
+                        the crear outdoors</p>
+                </div>
+                <div class="no_number">
+                    &#169; 2019 by PEAKS hikink club</div>
+            </div>
+        </div>
+    </footer>
+    <!-- <script src="script.js"></script> -->
 </body>
 
 </html>
