add two colors into css variables

--- a/HW3/index.html
+++ b/HW3/index.html
@@ -7,12 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PEAKS hiking club</title>
     <link rel="stylesheet" href="style/fonts.css">
+    <link rel="stylesheet" href="style/theme/day-variables.css">
     <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
     <section class="rock">
         <div class="container">
+            <button class="change-theme-button" id="change-theme-button">
+                Day theme
+              </button>
             <div class="logo">
                 <img src="img/m-logo.png" alt="logo" class="logo_img">
                 <div class="logo_txt">
@@ -145,7 +149,8 @@
             </div>
         </div>
     </footer>
-    <!-- <script src="script.js"></script> -->
+
+    <script src="script.js"></script>
 </body>
 
 </html>
