add scss instead of css

--- a/HW3/index.html
+++ b/HW3/index.html
@@ -104,7 +104,7 @@
                             Devils peak
                         </div>
                         <div class="adventure_txt adventure--grey">
-                            <p>We commence at the base o adventure--greyr the latelberg start point walking <br> the
+                            <p>We commence at the base of the latelberg start point walking <br> the
                                 contour. with unique
                                 views and possibly the best vantage <br> point to make out the entire Lion, iving below
                                 lable
