--- a/tiktok/index.html
+++ b/tiktok/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tik tok</title>
+    <title></title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h2>Water</h2>
-        <h2>Water</h2>
-    </div>
+    <section>
+        <img src="img/m-h-day.jpg" alt="1">
+        <h1>Den is going to sleep</h1>
+    </section>
 </body>
 </html>
