--- a/udemy/index.html
+++ b/udemy/index.html
@@ -55,5 +55,82 @@
             </div>
         </div>
     </section>
+    <section class="require">
+        <div class="container">
+            <div class="label">возможности</div>
+            <div class="title">условия и требования</div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="require_block warning">
+                        <div class="require_title">
+                            УСЛОВИЯ: со своим авто:
+                        </div>
+                        <ul class="require_list">
+                            <li>текст</li>
+                            <li>текст</li>
+                            <li>текст</li>
+                            <li>текст</li>
+                            <li>текст</li>
+                            <li>текст</li>
+                            <li>текст</li>
+                        </ul>
+                        <div class="require_descr">В день мы рубим бабосики нормально так приемлимо</div>
+                    </div>
+                </div>
+                    
+                <div class="col-md-6">
+                    <div class="require_block">
+                        <div class="require_title">
+                            УСЛОВИЯ: со своим авто:
+                        </div>
+                        <ul class="require_list">
+                            <li>текст</li>
+                            <li>текст</li>
+                            <li>текст</li>
+                            <li>текст</li>
+                            <li>текст</li>
+                            <li>текст</li>
+                            <li>текст</li>
+                        </ul>
+                        <div class="require_descr">В день мы рубим бабосики нормально так приемлимо</div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="require_block require_block_mbn">
+                        <div class="require_title">
+                            УСЛОВИЯ: со своим авто:
+                        </div>
+                        <ul class="require_list">
+                            <li>текст</li>
+                            <li>текст</li>
+                            <li>текст</li>
+                            <li>текст</li>
+                            <li>текст</li>
+                            <li>текст</li>
+                            <li>текст</li>
+                        </ul>
+                        <div class="require_descr">В день мы рубим бабосики нормально так приемлимо</div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="require_block require_block_mbn">
+                        <div class="require_title">
+                            УСЛОВИЯ: со своим авто:
+                        </div>
+                        <ul class="require_list">
+                            <li>текст</li>
+                            <li>текст</li>
+                            <li>текст</li>
+                            <li>текст</li>
+                            <li>текст</li>
+                            <li>текст</li>
+                            <li>текст</li>
+                        </ul>
+                        <div class="require_descr">В день мы рубим бабосики нормально так приемлимо</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
