--- a/HW4/index.html
+++ b/HW4/index.html
@@ -31,8 +31,8 @@
   <section class="sub-article">
     <div class="container">
       <div class="big_txt"> 
-        <div class="one">Lorem ipsum dolor, consectetur adipisicing.</div>
-        <div class="two">Aenean commodo ligula eget dolor.</div> </div>
+        Lorem ipsum dolor, consectetur adipisicing.
+        Aenean commodo ligula eget dolor. </div>
       <div class="small_txt">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum reprehenderit omnis eius sunt dolorem ut possimus. Laboriosam suscipit maiores eos magni impedit asperiores omnis ipsum beatae molestias earum! Assumenda, inventore.
         Praesentium sunt est, atque molestias vel repellat quisquam corporis sequi! Eligendi, iusto? Quibusdam, minus! Quidem commodi, delectus repellendus omnis temporibus a alias.
