add responzive design

--- a/sample/index.html
+++ b/sample/index.html
@@ -14,8 +14,8 @@
                 <h1>B2B MARKET</h1>
                 <h3>Your professional tool for wholesale trade</h3>
                 <div class="title_txt"> <b> Present your products to thousands of potential customers engaged 
-                    <br> in the international trade worldwide. Get direct orders, negotiate delivery 
-                    <br>terms, and arrange profitable deals without intermediares.</b></div>
+                     in the international trade worldwide. Get direct orders, negotiate delivery 
+                     terms, and arrange profitable deals without intermediares.</b></div>
                 <div class="button">
                     <button class="button_supplier">APPLY AS A SUPPLIER</button>
                     <button class="button_learn">LEARN MORE</button>
@@ -42,8 +42,8 @@
                     <path d="M35.74 11.64C35.74 11.54 35.7 11.42 35.68 11.32C35.66 11.24 35.64 11.14 35.62 11.06C35.58 10.98 35.52 10.92 35.48 10.84C35.42 10.76 35.36 10.66 35.28 10.6C35.26 10.58 35.26 10.56 35.24 10.56C35.18 10.52 35.12 10.5 35.06 10.46C34.98 10.4 34.88 10.34 34.78 10.3C34.68 10.26 34.58 10.26 34.48 10.24C34.4 10.22 34.34 10.2 34.26 10.2H28.4C27.58 10.2 26.9 10.88 26.9 11.7C26.9 12.52 27.58 13.2 28.4 13.2H30.9C26.14 18.2 20.14 21.72 13.4 23.42C12.6 23.62 12.1 24.44 12.3 25.24C12.46 25.92 13.08 26.38 13.76 26.38C13.88 26.38 14 26.36 14.12 26.34C21.26 24.56 27.64 20.86 32.74 15.62V17.56C32.74 18.38 33.42 19.06 34.24 19.06C35.06 19.06 35.74 18.38 35.74 17.56V11.7C35.74 11.68 35.74 11.66 35.74 11.64Z" fill="#403F41"/>
                     </svg></div>
                 <div class="item_txt">Simple way to promote 
-                    <br> products to the right 
-                    <br> target audience
+                     products to the right 
+                     target audience
                 </div>
             </div>
             <div class="item">
@@ -54,7 +54,7 @@
                     <path d="M31.54 26.78C29.92 26.78 28.58 28.1 28.58 29.74C28.58 31.36 29.9 32.7 31.54 32.7C33.16 32.7 34.5 31.38 34.5 29.74C34.5 28.1 33.18 26.78 31.54 26.78Z" fill="#403F41"/>
                     </svg></div>
                 <div class="item_txt">No commissions on 
-                    <br> deals not now, not ever.
+                     deals not now, not ever.
                 </div>
             </div>
             <div class="item">
@@ -63,8 +63,8 @@
                     <path d="M31.18 24.8V32.9399C31.18 33.6599 31.1 34.34 30.92 34.96C30.18 37.9 27.74 39.74 24.38 39.74H18.94L12.9 43.76C12 44.38 10.8 43.72 10.8 42.64V39.74C8.75999 39.74 7.06 39.06 5.88 37.88C4.68 36.68 4 34.9799 4 32.9399V24.8C4 21 6.36 18.38 10 18.04C10.26 18.02 10.52 18 10.8 18H24.38C28.46 18 31.18 20.72 31.18 24.8Z" fill="#403F41"/>
                     </svg></div>
                 <div class="item_txt">Unrestricted 
-                    <br> communication with 
-                    <br> buyers
+                     communication with 
+                     buyers
                 </div>
             </div>
         </div>
@@ -72,8 +72,8 @@
     <section class="promotion">
         <div class="promotion_title"> <b> Brand promotion</b></div>
         <div class="promotion_txt">Create a full company profile complete with brand info, company's 
-            <br> logo, contact detalis, and links to its website or social media.
-            <br>Increase recognition and build trust among potential buyers with the 
+            logo, contact detalis, and links to its website or social media.
+            Increase recognition and build trust among potential buyers with the 
             <br> <a href="#">B2B Market Supplier Promotion Program.</a>
         </div>
         <button class="promotion_btn">APPLY FOR A PROMOTION</button>
@@ -81,22 +81,22 @@
     <section class="postings">
         <div class="container">
             <img src="img/macbook.jpeg" alt="" class="postings_img">
-        <div class="postings_box">
-            <div class="postings_title"> <b>Unlimited postings</b> </div>
-            <div class="postings_txt">Display as many products as you like and as 
-                <br> often as you need. No restrictions or charges
-                <br> are applied to the quanity or regularity of 
-                <br> your uploads.
+            <div class="postings_box">
+                <div class="postings_title"> <b>Unlimited postings</b> </div>
+                <div class="postings_txt">Display as many products as you like and as 
+                     often as you need. No restrictions or charges
+                     are applied to the quanity or regularity of 
+                     your uploads.
+                </div>
+                <button class="postings_btn">ADD PRODUCT</button>
             </div>
-            <button class="postings_btn">ADD PRODUCT</button>
-        </div>
         </div>
     </section>
     <section class="access">
         <div class="access_title"> <b>Instant access to customers</b></div>
         <div class="access_txt">Don't wait for to write to you, start communication first. After adding 
-            <br> a product to the <a href="#">B2B Market</a>, you will have access to our database of over
-            <br> <b>25,000</b> buyers ariund the world
+             a product to the <a href="#">B2B Market</a>, you will have access to our database of over
+             <b>25,000</b> buyers ariund the world
         </div>
     </section>
     <section class="world">
@@ -104,8 +104,8 @@
     </section>
     <section class="feedback">
         <div class="feedback_txt">We want to make the platform even better and more functional.
-            <br> You can help us with this by writing your whishes and ideas to us at
-            <br> <a href="#">support@b2b.discount</a>
+             You can help us with this by writing your whishes and ideas to us at
+             <a href="#">support@b2b.discount</a>
         </div>
     </section>
 </body>
