--- a/prosto3/index.html
+++ b/prosto3/index.html
@@ -6,9 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,23 +37,27 @@
     <section class="international">
         <div class="international__base">
             <div class="international__base__title"><span class="blue-txt">b2b discount</span> is a platform for
-                international trade</div>
+                international trade
+            </div>
             <div class="international__base__subtitle">Buy and sell unclaimed cargo, find new clients and suppliers, get
-                access to articles on trade and industry news</div>
+                access to articles on trade and industry news
+            </div>
             <button class="btn btn-color--blue btn-sz--md">Get started</button>
         </div>
         <div class="international__img"></div>
     </section>
 
     <section class="solutions">
-        <div class="solutions__title">Solutions for your business:</div>
+        <div class="solutions__title">Solutions for your business:
+        </div>
         <div class="solutions__general">
             <div class="solutions__img"></div>
             <div class="solutions__base">
                 <div class="solutions__base__title">B2B Market</div>
                 <div class="solutions__base__subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Diam
                     luctus dictum bibendum feugiat faucibus cursus ipsum. Felis amet euismod id viverra. Hendrerit
-                    blandit tempor lacus, massa purus</div>
+                    blandit tempor lacus, massa purus
+                </div>
                 <div class="solutions__base__buttons">
                     <button class="btn btn-color--blue btn-sz--md mr-22">
                         <p class="mr-12">Start selling </p>
@@ -71,11 +73,13 @@
             <div class="unclaimed__base__title">Unclaimed Cargo</div>
             <div class="unclaimed__base__subtitle">Use our platform to sell unclaimed cargo. Provide supporting
                 documentation and put goods on offer at a discount of 5% to 90%. You will quickly find a new buyer among
-                thousands of our registered users.</div>
+                thousands of our registered users.
+            </div>
             <div class="unclaimed__base__buttons">
                 <button class="btn btn-color--blue btn-sz--md mr-22">
                     <p class="mr-12">Get started</p>
                     <img src="img/icon-btn.svg" alt="#">
+
                 </button>
                 <button class="btn btn-color--white btn-sz--md">Learn more</button>
             </div>
@@ -89,65 +93,119 @@
             <div class="tradebid__base__title">TradeBid</div>
             <div class="tradebid__base__subtitle">TradeBid is a tool designed to assist international traders in vendor
                 sourcing and procurement. The tool helps find new clients, sign new contracts, and arrange cargo supply
-                chains.</div>
+                chains.
+            </div>
             <button class="btn btn-color--blue btn-sz--md">Make it try</button>
         </div>
     </section>
 
-    <section class="blog swiper">
+    <section class="blog">
         <div class="blog__title">Read our Blog</div>
-        <div class="blog__tab swiper-wrapper">
-            <div class="blog__tab__item mb16 swiper-slide">
+        <div class="blog__tab>
+        <div class="blog__tab__item mb16">
+            <a class="blog__tab__overhead" href="#">Expotr/import requirements</a>
+            <div class="blog__tab__title">Невостребованные грузы – это большая проблема</div>
+            <div class="blog__tab__subtitle">Цель платформы не просто помочь экспортерам и трейдерам с
+                невостребованными грузами, а ...
+            </div>
+            <button class="btn btn-color--white btn-sz--sm">
+                <p class="mr-12">Read more</p>
+                <img src="img/icon-btn-blue.svg" alt="#">
+            </button>
+        </div>
+        <div class="blog__tab__items ml16 mb16">
+            <div class="blog__tab__item">
                 <a class="blog__tab__overhead" href="#">Expotr/import requirements</a>
                 <div class="blog__tab__title">Невостребованные грузы – это большая проблема</div>
                 <div class="blog__tab__subtitle">Цель платформы не просто помочь экспортерам и трейдерам с
-                    невостребованными грузами, а ...</div>
+                    невостребованными грузами, а ...
+                </div>
                 <button class="btn btn-color--white btn-sz--sm">
                     <p class="mr-12">Read more</p>
-                    <img src="img/icon-btn-blue.svg"
-                        alt="#">
+                    <img src="img/icon-btn-blue.svg" alt="#">
                 </button>
             </div>
-            <div class="blog__tab__items ml16 mb16">
-                <div class="blog__tab__item swiper-slide">
-                    <a class="blog__tab__overhead" href="#">Expotr/import requirements</a>
-                    <div class="blog__tab__title">Невостребованные грузы – это большая проблема</div>
-                    <div class="blog__tab__subtitle">Цель платформы не просто помочь экспортерам и трейдерам с
-                        невостребованными грузами, а ...</div>
-                    <button class="btn btn-color--white btn-sz--sm">
-                        <p class="mr-12">Read more</p>
-                        <img src="img/icon-btn-blue.svg"
-                            alt="#">
-                    </button>
-                </div>
-                <img class="blog__tab__img" src="img/ship.svg" alt="#">
-            </div>
+            <img class="blog__tab__img" src="img/ship.svg" alt="#">
+        </div>
 
-            <div class="blog__tab__items">
-                <div class="blog__tab__item swiper-slide">
-                    <a class="blog__tab__overhead" href="#">Expotr/import requirements</a>
-                    <div class="blog__tab__title">Невостребованные грузы – это большая проблема</div>
-                    <div class="blog__tab__subtitle">Цель платформы не просто помочь экспортерам и трейдерам с
-                        невостребованными грузами, а ...</div>
-                    <button class="btn btn-color--white btn-sz--sm">
-                        <p class="mr-12">Read more</p>
-                        <img src="img/icon-btn-blue.svg"
-                            alt="#">
-                    </button>
-                </div>
-                <img class="blog__tab__img" src="img/port.svg" alt="#">
-            </div>
-            <div class="blog__tab__item  ml16 swiper-slide">
+        <div class="blog__tab__items">
+            <div class="blog__tab__item">
                 <a class="blog__tab__overhead" href="#">Expotr/import requirements</a>
                 <div class="blog__tab__title">Невостребованные грузы – это большая проблема</div>
                 <div class="blog__tab__subtitle">Цель платформы не просто помочь экспортерам и трейдерам с
-                    невостребованными грузами, а ...</div>
+                    невостребованными грузами, а ...
+                </div>
+                <button class="btn btn-color--white btn-sz--sm">
+                    <p class="mr-12">Read more</p>
+                    <img src="img/icon-btn-blue.svg" alt="#">
+                </button>
+            </div>
+            <img class="blog__tab__img" src="img/port.svg" alt="#">
+        </div>
+        <div class="blog__tab__item ml16">
+            <a class="blog__tab__overhead" href="#">Expotr/import requirements</a>
+            <div class="blog__tab__title">Невостребованные грузы – это большая проблема</div>
+            <div class="blog__tab__subtitle">Цель платформы не просто помочь экспортерам и трейдерам с
+                невостребованными грузами, а ...
+            </div>
+            <button class="btn btn-color--white btn-sz--sm">
+                <p class="mr-12">Read more</p>
+                <img src="img/icon-btn-blue.svg" alt="#">
+            </button>
+        </div>
+        </div>
+    </section>
+
+    <section class="blog-sm swiper">
+        <div class="blog-sm__title">Read our Blog</div>
+        <div class="blog-sm__tab swiper-wrapper" id="swiper-wrapper">
+            <div class="blog-sm__tab__item mb16 swiper-slide ">
+                <a class="blog-sm__tab__overhead" href="#">Expotr/import requirements</a>
+                <div class="blog-sm__tab__title">Невостребованные грузы – это большая проблема</div>
+                <div class="blog-sm__tab__subtitle">Цель платформы не просто помочь экспортерам и трейдерам с
+                    невостребованными грузами, а ...
+                </div>
                 <button class="btn btn-color--white btn-sz--sm">
                     <p class="mr-12">Read more</p>
                     <img src="img/icon-btn-blue.svg" alt="#">
                 </button>
             </div>
 
+            <div class="blog-sm__tab__item mb16 swiper-slide ">
+                <a class="blog-sm__tab__overhead" href="#">Expotr/import requirements</a>
+                <div class="blog-sm__tab__title">Невостребованные грузы – это большая проблема</div>
+                <div class="blog-sm__tab__subtitle">Цель платформы не просто помочь экспортерам и трейдерам с
+                    невостребованными грузами, а ...
+                </div>
+                <button class="btn btn-color--white btn-sz--sm">
+                    <p class="mr-12">Read more</p>
+                    <img src="img/icon-btn-blue.svg" alt="#">
+                </button>
+            </div>
+
+            <div class="blog-sm__tab__item mb16 swiper-slide ">
+                <a class="blog-sm__tab__overhead" href="#">Expotr/import requirements</a>
+                <div class="blog-sm__tab__title">Невостребованные грузы – это большая проблема</div>
+                <div class="blog-sm__tab__subtitle">Цель платформы не просто помочь экспортерам и трейдерам с
+                    невостребованными грузами, а ...
+                </div>
+                <button class="btn btn-color--white btn-sz--sm">
+                    <p class="mr-12">Read more</p>
+                    <img src="img/icon-btn-blue.svg" alt="#">
+                </button>
+            </div>
+
+            <div class="blog-sm__tab__item mb16 swiper-slide ">
+                <a class="blog-sm__tab__overhead" href="#">Expotr/import requirements</a>
+                <div class="blog-sm__tab__title">Невостребованные грузы – это большая проблема</div>
+                <div class="blog-sm__tab__subtitle">Цель платформы не просто помочь экспортерам и трейдерам с
+                    невостребованными грузами, а ...
+                </div>
+                <button class="btn btn-color--white btn-sz--sm">
+                    <p class="mr-12">Read more</p>
+                    <img src="img/icon-btn-blue.svg" alt="#">
+                </button>
+            </div>
         </div>
     </section>
 
@@ -164,7 +222,7 @@
                     <br> 610 N. Gilbert Rd. Suite 201
                     Gilbert, AZ 85234
                 </div>
-                <div class="footer__content__txt">© 2020 Legal Notice Privacy Policy </div>
+                <div class="footer__content__txt">© 2020 Legal Notice Privacy Policy</div>
             </div>
             <div class="footer__lists">
                 <ul class="footer__list">
@@ -195,6 +253,7 @@
             </div>
         </div>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="js/script.js"></script>
 </body>
